fix the size of og:image for the test

--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Toddlr"
 meta_title: "Toddlr The Daycare Finder"
 meta_description: "Find the best daycare for your kids"
-meta_image: "logo.png"
+meta_image: "cover.png"
